--- a/.env
+++ b/.env
@@ -29,12 +29,12 @@ CACHE_PREFIX="${APP_NAME}:"
 REDIS_PREFIX=
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.126.com
+MAIL_PORT=25
+MAIL_USERNAME=ff_10e4t
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
