feat(添加访问量)-使用rabbitmq队列添加访问量

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/psr7": "^2.4",
+        "illuminate/queue": "*",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "lcobucci/jwt": "^3.4",
