--- a/.env
+++ b/.env
@@ -8,22 +8,22 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.3.16
 DB_PORT=3306
-DB_DATABASE=mysql
+DB_DATABASE=wx_study
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=fang123...
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=sync
+#QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=
+REDIS_PASSWORD=fang123...
 REDIS_PORT=6379
 CACHE_PREFIX="${APP_NAME}:"
 REDIS_PREFIX=
@@ -49,3 +49,20 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# 默认使用rabbitmq队列，后面启动队列监听的时候，如果不指定驱动，就默认用这个名称指定的驱动
+QUEUE_CONNECTION=rabbitmq
+# 使用的队列驱动
+QUEUE_DRIVER=rabbitmq
+# mq的ip地址
+RABBITMQ_HOST=127.0.0.1
+# mq的端口
+RABBITMQ_PORT=5672
+# mq的账号
+RABBITMQ_USER=root
+# mq的密码
+RABBITMQ_PASSWORD=root
+# 默认的虚拟主机
+RABBITMQ_VHOST=blog
+# 默认队列名称
+# RABBITMQ_QUEUE=product
