refactor(初始化)-下载扩展enqueue/rdkafka

--- a/.env
+++ b/.env
@@ -66,3 +66,6 @@ RABBITMQ_PASSWORD=root
 RABBITMQ_VHOST=blog
 # 默认队列名称
 # RABBITMQ_QUEUE=product
+
+KAFKA_BROKERS=127.0.0.1:9092
+KAFKA_TOPIC=my-topic
