feat(日志记录)-kafka队列实现日志记录

--- a/.env
+++ b/.env
@@ -67,5 +67,6 @@ RABBITMQ_VHOST=blog
 # 默认队列名称
 # RABBITMQ_QUEUE=product
 
-KAFKA_BROKERS=127.0.0.1:9092
-KAFKA_TOPIC=my-topic
+KAFKA_BROKERS=192.168.3.16:9092
+KAFKA_GROUP=192.168.3.16:2181
+QUEUE_LOGS=true
