--- a/.env
+++ b/.env
@@ -69,4 +69,5 @@ RABBITMQ_VHOST=blog
 
 KAFKA_BROKERS=192.168.3.16:9092
 KAFKA_GROUP=192.168.3.16:2181
-QUEUE_LOGS=true
+# 是否开启kafka记录日志
+QUEUE_LOGS=false
